<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:fillViewport="true"
 			>
    			
<LinearLayout 
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

	<TextView 
		android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp"
	    android:text="@string/config_home_wifi"
		android:id="@+id/txtConfigureHomeWifi"
		/>
		
	<TableLayout
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp"
		android:stretchColumns="1"
		android:layout_weight="1"
		>
		<TableRow> 
	        <TextView android:layout_height="match_parent"
	        				android:gravity="center_vertical"
	        				android:text="@string/wifi_network_name"
	        				android:textColor="#6598EB"
							/>
			<EditText android:text=""
         					android:id="@+id/txtSSID"
         					android:layout_height="44sp"
						    android:layout_marginLeft="5dp"
         					android:textSize="18sp"
         					android:textStyle="bold" 
						    android:lines="1"
						    android:maxLines="1"
						    android:hint="@string/enter_ssid_hint"
						    />
	    </TableRow>
	    <TableRow>
	        <TextView android:layout_height="match_parent"
	        				android:gravity="center_vertical"
	        				android:text="@string/wifi_password"
	        				android:textColor="#6598EB"
							/>
			<EditText android:text=""
         					android:id="@+id/txtPassword"
         					android:layout_height="44sp"
						    android:layout_marginLeft="5dp"
         					android:textSize="18sp"
         					android:textStyle="bold" 
						    android:lines="1"
						    android:maxLines="1"
						    />
	    </TableRow>
	    
	    <!-- WiFi security selection --> 
	    <TableRow>
	        <TextView android:layout_height="match_parent"
	        				android:gravity="center_vertical"
	        				android:text="@string/wifi_security"
	        				android:textColor="#6598EB"
							/>
	        <Spinner android:id="@+id/spinnerEncryption"
         					android:layout_height="44sp"
						    android:layout_marginLeft="5dp"
	        				/>
	    </TableRow> 
	    
	    <!-- Show/hide plain text password -->
	    <TableRow>
	        <TextView />
	        <CheckBox android:id="@+id/chkShowWifiPassword"
	            			android:layout_height="38sp"
	            			android:layout_marginLeft="4dp"
	            			android:layout_marginRight="5dp"
	             			android:text="@string/show_password"
	             			/>   
	    </TableRow>
	    
	</TableLayout>
	
	
	<!-- The bottom 2 buttons -->
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    >
	    <Button
			android:id="@+id/button_back_wifi"
			android:text="@string/button_back"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_weight="0.5"
			/>
		<Button
			android:id="@+id/button_next_wifi"
			android:text="@string/button_next"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_weight="0.5"
			/>
	</LinearLayout>
		
</LinearLayout>

</ScrollView>