<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:fillViewport="true"
 			>
 			
 	<!-- Background & navbar -->

    <ImageView
    		android:layout_height="fill_parent"
    		android:layout_width="fill_parent"
    		android:scaleType="centerCrop"
    		android:src="@drawable/device_list_bg"
    		android:layout_centerHorizontal="true"
    		android:layout_centerVertical="true"
    		/>
    	    
    <ImageView
    		android:id="@+id/navbar"
    		android:layout_height="wrap_content"
    		android:layout_width="fill_parent"
    		android:scaleType="centerCrop"
    		android:src="@drawable/navbar_bg"
    		android:layout_centerHorizontal="true"
    		android:layout_alignParentTop="true"
    		/>
    		
    <!-- Back button & spinning icon -->
    	
    <ImageView
    		android:id="@+id/btn_back"
    		android:layout_height="wrap_content"
    		android:layout_width="wrap_content"
    		android:scaleType="centerCrop"
    		android:src="@drawable/navbar_back"
    		android:layout_alignParentLeft="true"
    		android:layout_alignParentTop="true"
    		android:visibility="invisible"
    		/>
    		
    <ImageView
    		android:id="@+id/loading_icon"
    		android:layout_height="wrap_content"
    		android:layout_width="wrap_content"
    		android:scaleType="centerCrop"
    		android:src="@drawable/loading_icon"
    		android:layout_alignParentRight="true"
    		android:layout_alignParentTop="true"
    		android:visibility="invisible"
    		/>
    		
    <ScrollView
    	android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_below="@+id/navbar"
		android:fillViewport="true"
    	>
    		
    <!-- The rest -->
 			
		<LinearLayout
		    android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    >
		    
			<TextView 
				android:layout_width="fill_parent" 
			    android:layout_height="wrap_content"
		        android:layout_marginLeft="5dp"
				android:layout_marginRight="5dp"
			    android:text="@string/config_chumby_account"
			    android:id="@+id/txtConfigureChumbyAccount"
			    />
			    	    
			<TableLayout
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:layout_marginLeft="5dp"
				android:layout_marginRight="5dp"
				android:stretchColumns="1"
				android:layout_weight="1"
				>
				<TableRow> 
			        <TextView android:layout_height="match_parent"
			        				android:gravity="center_vertical"
			        				android:text="@string/chumby_username"
			        				android:textColor="#6598EB"
									/>
			        <EditText android:text=""
		         					android:id="@+id/txtChumbyUsername"
		         					android:layout_height="44sp"
								    android:layout_marginLeft="5dp"
		         					android:textSize="18sp"
		         					android:textStyle="bold" 
								    android:lines="1"
								    android:maxLines="1"
								    />
			    </TableRow>
			    <TableRow>
			        <TextView android:layout_height="match_parent"
									android:gravity="center_vertical"
									android:text="@string/chumby_password"
									android:textColor="#6598EB"
									/>
			        <EditText android:text=""
		         					android:id="@+id/txtChumbyPassword"
		         					android:layout_height="44sp"
								    android:layout_marginLeft="5dp"
		         					android:textSize="18sp"
		         					android:textStyle="bold" 
								    android:lines="1"
								    android:maxLines="1"
								    />
			    </TableRow>
			   	<TableRow>
			        <TextView android:layout_height="match_parent"
									android:gravity="center_vertical"
									android:text="@string/chumby_device_name"
									android:textColor="#6598EB"
									/>
			        <EditText android:text="@string/product_name"
		         					android:id="@+id/txtChumbyDeviceName"
		         					android:layout_height="44sp"
								    android:layout_marginLeft="5dp"
		         					android:textSize="18sp"
		         					android:textColor="#6598EB"
		         					android:textStyle="bold" 
								    android:lines="1"
								    android:maxLines="1"
								    />
			    </TableRow>
			    
			    <!-- Show/hide plain text password -->
			    <TableRow>
			        <TextView />
			        <CheckBox android:id="@+id/chkShowChumbyPassword"
			            			android:layout_height="38sp"
			            			android:layout_marginLeft="4dp"
			            			android:layout_marginRight="5dp"
			             			android:text="@string/show_password"
			             			/>   
			    </TableRow>
			
			</TableLayout>
			
				
			<!-- The bottom 2 buttons -->
			<LinearLayout
			    android:orientation="horizontal"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_alignParentBottom="true"
			    >
			    <Button
					android:id="@+id/button_not_now"
					android:text="@string/button_not_now"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:layout_weight="0.5"
					/>
				<Button
					android:id="@+id/button_next_account"
					android:text="@string/button_activate"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:layout_weight="0.5"
					/>
			</LinearLayout>
			
		</LinearLayout>
	
	</ScrollView>

</RelativeLayout>
