<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<TextView 
		android:id="@+id/txtSelectHomeWifi"
		android:text="@string/select_home_wifi"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#00CCFF"
	    />
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:id="@+id/linearWifiButtons"
	    >
		<Button
			android:id="@+id/button_refresh_wifi"
			android:text="@string/button_refresh"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_weight="0.5"
			/>
		<Button
			android:id="@+id/button_next_wifi"
			android:text="@string/button_next"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_weight="0.5"
			/>
	</LinearLayout>
	<ListView
		android:id="@+id/list_wifi"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:layout_below="@+id/txtSelectHomeWifi"
		android:layout_above="@+id/linearWifiButtons"
		android:layout_centerHorizontal="true"
		android:divider="#333333"
        android:dividerHeight="1dip"
        	/>
</RelativeLayout>
