<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">
	<TableRow>
	    <TextView
	        android:id="@+id/username_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/chumby_username"
	        android:gravity="left"
	        android:layout_marginLeft="10dip"
	        android:layout_marginRight="10dip"
	        />
	    <EditText
	        android:id="@+id/username"
	        android:layout_height="wrap_content"
	        android:layout_width="150dp"
	        android:layout_marginRight="10dip"
	        android:scrollHorizontally="true"
	        android:singleLine="true"
        	android:maxLength="100"
	        android:gravity="right"
	        />
	</TableRow>
	<TableRow>
	    <TextView
	        android:id="@+id/password_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/chumby_password"
	        android:gravity="left"
	        android:layout_marginLeft="10dip"
	        android:layout_marginRight="10dip"
	        />
	    <EditText
	        android:id="@+id/password"
	        android:layout_height="wrap_content"
	        android:layout_width="150dp"
	        android:layout_marginRight="10dip"
	        android:scrollHorizontally="true"
	        android:singleLine="true"
	        android:gravity="right"
        	android:maxLength="40"
	        android:password="true"
	        android:inputType="textPassword"
	        />
	</TableRow>
	<TableRow >
	    <TextView
	        android:id="@+id/device_name_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/chumby_device_name"
	        android:gravity="left"
	        android:layout_marginLeft="10dip"
	        android:layout_marginRight="10dip"
	        />
	    <EditText
	        android:id="@+id/device_name"
	        android:layout_height="wrap_content"
	        android:layout_width="150dp"
	        android:layout_marginRight="10dip"
	        android:scrollHorizontally="true"
	        android:singleLine="true"
        	android:maxLength="150"
	        android:gravity="right"
	        />
	</TableRow>
</TableLayout>
